# SpectraSolverPlugin

./: CMakeLists.txt  README.md  spectra_demo.cpp  spectra_pardiso_demo.cpp
src/: SparseGenRealShiftSolvePardiso.h  pardiso_spd_solver.cpp  pardiso_spd_solver.h
